--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apexcharts": "^3.35.3",
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "node-sass": "^7.0.1",
     "pinia": "^2.0.16",
-    "vue": "^3.2.13"
+    "sass-loader": "^13.0.2",
+    "vue": "^3.2.13",
+    "vue-router": "^4.1.2",
+    "vue3-apexcharts": "^1.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -33,7 +39,10 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "vue/multi-word-component-names": "off",
+      "no-unused-vars": "off"
+    }
   },
   "browserslist": [
     "> 1%",
