--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@kyvg/vue3-notification": "^2.4.1",
     "apexcharts": "^3.35.3",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
@@ -41,7 +42,8 @@
     },
     "rules": {
       "vue/multi-word-component-names": "off",
-      "no-unused-vars": "off"
+      "no-unused-vars": "off",
+      "vue/no-unused-components": "off"
     }
   },
   "browserslist": [
