--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "apexcharts": "^3.35.3",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "dotenv": "^16.0.3",
+    "jose": "^4.11.0",
     "node-sass": "^7.0.1",
     "pinia": "^2.0.16",
     "sass-loader": "^13.0.2",
     "vue": "^3.2.13",
     "vue-router": "^4.1.2",
-    "vue3-apexcharts": "^1.4.1"
+    "vue3-apexcharts": "^1.4.1",
+    "vue3-google-oauth2": "^1.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
